[package]
edition = "2021"
name = "ptera-api"
version = "0.1.0"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
dotenv = "0.15.0"
json = "0.12.4"
lambda_http = {version = "0.6.0", default-features = false, features = ["apigw_http", "apigw_rest"]}
lambda_runtime = "0.6.0"
log = "0.4.17"
once_cell = "1.14.0"
regex = "1.6.0"
serde = "1.0.144"
serde_json = "1.0.85"
simplelog = "0.12.0"
tokio = {version = "1", features = ["macros"]}
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}
uuid = {version = "1.1.2", features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs]}
]}
